added get vehicles without pagination
