# routes/vehicle/vehicle.routes.js
@@ -4,9 +4,11 @@ const {
 } = require('../../middleware/protect');
 const {
     registerVehicle,
-    getVehicles
+    getVehicles,
+    getVehiclesWithoutPag
 } = require('../../controllers/vehicle/vehicle.controller');
 const Router = express.Router();
 Router.post("/", protect, registerVehicle);
 Router.get("/:page/:perPage", protect, getVehicles);
+Router.get("/all", protect, getVehiclesWithoutPag);
 module.exports.vehicleRouter = Router;
